--- a/libs/ledgerjs/packages/cryptoassets/package.json
+++ b/libs/ledgerjs/packages/cryptoassets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ledgerhq/cryptoassets",
-  "version": "7.2.0",
+  "version": "7.3.0-prerelease-test.0",
   "description": "Ledger crypto-assets list",
   "keywords": [
     "Ledger"
