--- a/libs/ledgerjs/packages/types-live/package.json
+++ b/libs/ledgerjs/packages/types-live/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ledgerhq/types-live",
-  "version": "6.28.1",
+  "version": "6.29.0-next.0",
   "description": "Ledger Live main types.",
   "keywords": [
     "Ledger"
