--- a/tools/common-tools/package.json
+++ b/tools/common-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "live-common-tools",
-  "version": "0.2.20",
+  "version": "0.2.21-next.0",
   "private": true,
   "dependencies": {
     "@ledgerhq/cryptoassets": "workspace:^",
