--- a/.github/workflows/test-desktop.yml
+++ b/.github/workflows/test-desktop.yml
@@ -177,7 +177,7 @@ jobs:
     name: "Ledger Live Desktop Tests (macos-latest)"
     needs: [pr-is-fork]
     if: ${{ !fromJSON(needs.pr-is-fork.outputs.pr-is-fork) }}
-    runs-on: [ledger-live, macos]
+    runs-on: [m1, ARM64]
     env:
       NODE_OPTIONS: "--max-old-space-size=7168"
       INSTRUMENT_BUILD: true
