--- a/apps/ledger-live-desktop/.gitignore
+++ b/apps/ledger-live-desktop/.gitignore
@@ -121,6 +121,7 @@ tests/coverage/
 tests/artifacts/*
 !tests/artifacts/.gitkeep
 tests/utils/dummy-live-app/build
+tests/utils/dummy-wallet-app/build
 
 # Yalc
 .yalc
