--- a/apps/ledger-live-mobile/package.json
+++ b/apps/ledger-live-mobile/package.json
@@ -174,6 +174,7 @@
     "react-native-share": "^7.9.0",
     "react-native-slider": "^0.11.0",
     "react-native-splash-screen": "3.2.0",
+    "react-native-startup-time": "^2.0.1",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.3.0",
     "react-native-tcp": "^4.0.0",
