--- a/apps/ledger-live-desktop/package.json
+++ b/apps/ledger-live-desktop/package.json
@@ -166,6 +166,7 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.15.0",
     "@bunchtogether/vite-plugin-flow": "^1.0.2",
+    "@electron/fuses": "^1.6.1",
     "@mapbox/node-pre-gyp": "^1.0.8",
     "@octokit/rest": "^18.12.0",
     "@playwright/test": "1.27.1",
