--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -175,7 +175,7 @@
     "@xstate/react": "^1.6.3",
     "@zondax/cbor": "v8.1.0-zondax-no-bigint",
     "@zondax/ledger-filecoin": "^0.11.2",
-    "@zondax/ledger-icp": "0.7.0-beta.2",
+    "@zondax/ledger-icp": "^0.7.0",
     "algo-msgpack-with-bigint": "^2.1.1",
     "algosdk": "1.13.0",
     "async": "^3.2.3",
@@ -184,6 +184,7 @@
     "base32-decode": "^1.0.0",
     "bchaddrjs": "^0.5.2",
     "bech32": "^1.1.3",
+    "big-integer": "^1.6.51",
     "bignumber.js": "^9.1.0",
     "bip32": "^2.0.6",
     "bip32-path": "^0.4.2",
