support: prevent merge error on the release flow Creates a PR if we have an error during the merge to develop Also merge the hotfix to the release branch and handles errors too

--- a/.github/workflows/release-prepare.yml
+++ b/.github/workflows/release-prepare.yml
@@ -61,14 +61,48 @@ jobs:
         run: |
           git fetch origin develop main
 
-      - name: merge into develop
-        run: |
-          git checkout develop
-          git merge ${{ github.event.inputs.ref }}
-          git push origin develop
-
       - name: merge into main
         run: |
           git checkout main
           git merge ${{ github.event.inputs.ref }}
           git push origin main
+
+      - name: merge into develop
+        id: merge-develop
+        run: |
+          git checkout develop
+          if [[ git merge ${{ github.event.inputs.ref }} ]]
+          then
+            git push origin develop
+            echo "create-pr=0" >> $GITHUB_OUTPUT
+          else
+            git checkout ${{ github.event.inputs.ref }}
+            git checkout -b support/release-merge-conflicts
+            git push origin support/release-merge-conflicts
+            echo "create-pr=1" >> $GITHUB_OUTPUT
+          fi
+
+      - uses: actions/github-script@v6
+        name: create PR
+        if: ${{ steps.merge-develop.outputs.create-pr == 1 }}
+        with:
+          github-token: ${{ secrets.GH_PAT }}
+          script: |
+            github.rest.pulls.create({
+              owner: "ledgerhq",
+              repo: "ledger-live",
+              head: "support/release-merge-conflicts",
+              base: "develop",
+              title: ":rotating_light: Release merge conflicts",
+              body: `# The release had some merge conflicts :rotating_light:
+              
+              This pull request was created in order to resolve the merge conflicts between the release and develop branches. 
+              
+              ## Checklist
+              
+              To be ready to be merged, we must comply with all theses checks:
+              
+              - [ ] all CI checks have passed
+              - [ ] reviews of the code owners impacted by the conflict
+              `
+            });
