ci(mobile): set HOME env

--- a/.github/workflows/test-mobile-e2e.yml
+++ b/.github/workflows/test-mobile-e2e.yml
@@ -178,9 +178,6 @@ jobs:
           cache: "gradle"
       - name: setup Android SDK
         uses: android-actions/setup-android@v2.0.8
-      # - name: set ANDROID_AVD_HOME env
-      #   run: |
-      #     echo "ANDROID_AVD_HOME=$ANDROID_HOME/../avd" >> $GITHUB_ENV
       # - name: Create SDK
       #   env:
       #     DEVICE_NAME: Pixel_5_API_31
@@ -226,6 +223,8 @@ jobs:
       #   uses: gradle/gradle-build-action@v2
       - name: create AVD and generate snapshot for caching
         uses: reactivecircus/android-emulator-runner@v2.27.0
+        env:
+          HOME: /root
         with:
           api-level: 31
           arch: x86_64
