--- a/.github/workflows/test-mobile-e2e.yml
+++ b/.github/workflows/test-mobile-e2e.yml
@@ -181,22 +181,6 @@ jobs:
       - name: export HOME env
         run: |
           echo "HOME=/root" >> $GITHUB_ENV
-      - name: create AVD and generate snapshot for caching
-        uses: reactivecircus/android-emulator-runner@v2.27.0
-        with:
-          api-level: 31
-          arch: x86_64
-          target: default
-          avd-name: "Pixel_5_API_31"
-          force-avd-creation: true
-          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          disable-animations: false
-          cores: 4
-          ram-size: 4096M
-          heap-size: 512M
-          disk-size: 4096M
-          script: |
-            echo "Generated AVD snapshot for caching."
       - name: Install dependencies
         run: |
           pnpm i --filter="live-mobile..." --filter="ledger-live" --no-frozen-lockfile --unsafe-perm
@@ -210,14 +194,14 @@ jobs:
           pnpm mobile e2e:build -c android.emu.release
       - name: Run Android tests
         uses: reactivecircus/android-emulator-runner@v2
-        timeout-minutes: 20
+        timeout-minutes: 60
         with:
           api-level: 31
           arch: x86_64
           target: default
           avd-name: "Pixel_5_API_31"
-          force-avd-creation: false
-          emulator-options: -verbose -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          force-avd-creation: true
+          emulator-options: -verbose -no-snapshot-save -no-window -noaudio -no-boot-anim -camera-back none
           cores: 4
           ram-size: 4096M
           heap-size: 512M
