--- a/.github/workflows/test-mobile-e2e.yml
+++ b/.github/workflows/test-mobile-e2e.yml
@@ -189,6 +189,21 @@ jobs:
           pnpm build:llm:deps
       - name: Gradle cache
         uses: gradle/gradle-build-action@v2
+      - name: Cache Android Emulator
+        uses: reactivecircus/android-emulator-runner@v2
+        timeout-minutes: 60
+        with:
+          api-level: 31
+          arch: x86_64
+          target: default
+          avd-name: "Pixel_5_API_31"
+          force-avd-creation: true
+          emulator-options: -verbose -no-snapshot-save -no-window -noaudio -no-boot-anim -camera-back none
+          cores: 4
+          ram-size: 4096M
+          heap-size: 512M
+          disk-size: 4096M
+          script: echo "Caching Emulator"
       - name: Build Android app for Detox test run
         run: |
           pnpm mobile e2e:build -c android.emu.release
@@ -200,7 +215,7 @@ jobs:
           arch: x86_64
           target: default
           avd-name: "Pixel_5_API_31"
-          force-avd-creation: true
+          force-avd-creation: false
           emulator-options: -verbose -no-snapshot-save -no-window -noaudio -no-boot-anim -camera-back none
           cores: 4
           ram-size: 4096M
