--- a/package.json
+++ b/package.json
@@ -122,7 +122,8 @@
       "react-native-image-crop-tools@1.6.2": "patches/react-native-image-crop-tools@1.6.2.patch",
       "rn-fetch-blob@0.12.0": "patches/rn-fetch-blob@0.12.0.patch",
       "react-native-os@1.2.6": "patches/react-native-os@1.2.6.patch",
-      "react-native-tcp@4.0.0": "patches/react-native-tcp@4.0.0.patch"
+      "react-native-tcp@4.0.0": "patches/react-native-tcp@4.0.0.patch",
+      "detox@20.0.3": "patches/detox@20.0.3.patch"
     }
   }
 }
