--- a/libs/ledgerjs/packages/hw-app-algorand/package.json
+++ b/libs/ledgerjs/packages/hw-app-algorand/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ledgerhq/hw-app-algorand",
-  "version": "6.27.10",
+  "version": "6.27.11-next.0",
   "description": "Ledger Hardware Wallet Algorand Application API",
   "keywords": [
     "Ledger",
