--- a/libs/ledgerjs/packages/hw-app-xrp/package.json
+++ b/libs/ledgerjs/packages/hw-app-xrp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ledgerhq/hw-app-xrp",
-  "version": "6.27.10",
+  "version": "6.27.11-next.0",
   "description": "Ledger Hardware Wallet Ripple Application API",
   "keywords": [
     "Ledger",
