ci(mobile): c5 images  + arm emulators

--- a/.github/workflows/test-mobile-e2e.yml
+++ b/.github/workflows/test-mobile-e2e.yml
@@ -132,7 +132,7 @@ jobs:
           aws-nfs-logging: true
           ami-name-filter: ledger-live-runner
           instance-volume-size: 40
-          instance-type: a1.metal
+          instance-type: c5.4xlarge
 
   stop-runner:
     name: Stop self-hosted EC2 runner
