--- a/.github/workflows/test-mobile-e2e.yml
+++ b/.github/workflows/test-mobile-e2e.yml
@@ -132,7 +132,7 @@ jobs:
           aws-nfs-logging: true
           ami-name-filter: ledger-live-runner
           instance-volume-size: 40
-          instance-type: c5.4xlarge
+          instance-type: c5.metal
 
   stop-runner:
     name: Stop self-hosted EC2 runner
@@ -195,7 +195,7 @@ jobs:
         timeout-minutes: 60
         with:
           api-level: 31
-          arch: arm64-v8a
+          arch: x86_64
           target: default
           avd-name: "Pixel_5_API_31"
           force-avd-creation: true
@@ -213,7 +213,7 @@ jobs:
         timeout-minutes: 60
         with:
           api-level: 31
-          arch: arm64-v8a
+          arch: x86_64
           target: default
           avd-name: "Pixel_5_API_31"
           force-avd-creation: false
